tests/paczka1/fuzzy1/59633185.err
Error in line 6: 1I4U A115 94,60
Error in line 7: yxQd5UgwMM A320 35,6
Error in line 15: 2pX8amZfL S756 >2,4
Error in line 8: 2pX8amZfL S324 83,0
Error in line 18: 2pX8amZfL S756 381,6
Error in line 14: yxQd5UgwMM A115 7,6
Error in line 30: 1I4U S756 80,2
Error in line 28: gAyB S756 268,9
Error in line 33: 8ihs S324 28,6
Error in line 29: A320 S324 343,1
